# goofi-pipe

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml  python-publish.yml
assets/: air_elements_filtered.csv  nfixer.pt  nrealfixer.pt  planets_peaks_long.csv
devices/crown/: .gitignore  crown2lsl.py
devices/dsi24/: README.md  connect_dsi.sh  dsi2lsl.sh  impedance.py  install_dsi.sh
devices/muse/: README.md
embeddings/: air_elements.csv  vacuum_elements.csv
examples/: Audio_classifier.gfi  Connectivity_and_spectrogram.gfi  EEG_PCA.gfi  EEG_classifier.gfi  EEG_to_text.gfi  Musical_features.gfi  PSD.gfi  Powerbands_OSC.gfi  Video_classifier.gfi  brain_latent_trajectory.gfi  earth_walker.gfi  latent_rotator.gfi
goofi/: data_in.py  data_out.py  manager.py  normalization.py  processors.py  utils.py
neurofeedback/: data_in.py  data_out.py  manager.py  normalization.py  processors.py  utils.py
resources/: peaks_sun_circumsolar_prom0-05.csv  peaks_sun_extraterrestrial_prom0-05.csv  planets_peaks_prominence02.csv
scripts/: latent_poetry.py  manager_biotuner_file.py  manager_biotuner_plant.py  manager_muscle.py  manager_muscle_ppg.py  manager_offline_eeg.py  manager_plant.py  manager_ppg.py  mechanical_poet.py  print_osc.py  receive_img.py  text_input.py
src/goofi/: connection.py  constants.py  data.py  gui.py  main.py  manager.py  message.py  node.py  node_helpers.py  params.py  pipes.py
src/goofi/assets/: .gitignore  audio_tags_structure.pkl  earth.npy  planets_peaks.csv
src/goofi/gui/: data_viewer.py  events.py  window.py
src/goofi/nodes/: add.py  buffer.py  constant.py
src/goofi/nodes/analysis/: audio2txt.py  audiotagging.py  avalanches.py  binarize.py  bioelements.py  (+42 more)
tests/: conftest.py  test_connection.py  test_constants.py  test_data.py  test_gui.py  test_manager.py  test_message.py  test_node.py  test_node_container.py  test_node_helpers.py  test_nodes.py  test_params.py  utils.py
tests/processors/: test_lempelziv.py  test_psd.py
(+100 files in other folders)
