[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 128

[project.scripts]
goofi-pipe = "goofi.manager:main"

[project]
description = "Real-time neuro-/biosignal processing and streaming pipeline."
dynamic = ["dependencies"]
keywords = ["signal-processing", "neurofeedback", "biofeedback", "real-time", "EEG", "ECG"]
license = {file = "LICENSE"}
name = "goofi"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
version = "2.1.5"
