[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 128

[project.scripts]
goofi-pipe = "goofi.manager:main"

[project]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
description = "Real-time neuro-/biosignal processing and streaming pipeline."
dynamic = ["dependencies"]
keywords = ["signal-processing", "neurofeedback", "biofeedback", "real-time", "EEG", "ECG"]
license = {file = "LICENSE"}
name = "goofi"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
version = "2.1.16"
